--- a/about-me.html
+++ b/about-me.html
@@ -14,6 +14,7 @@ about-me.html
 			<a href="contacts.html">Contacts</a>
 		
 		</nav>
+		<img src= meee.JPG
 		<div id=huh><p>Hello, my name is Keewaan Bell and I am a first year at SMASH Academy. I'm a rising sophomore at Morrow High school. I'm in the magnet program and I play basketball. My favorite color is orange and my favorite food is pizza. I enjoy playing sports and video games. If you ever want to talk to me,  I'm a nice and outgoing person, I just need my moments alone sometimes.
 		 I feel like I'm pretty happy where I am. SMASH is going good, and I'm having fun at the moment.</p></div>
 	</body>
