--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
-index.html
+
 <!DOCTYPE html>
 <html>
 	<head>
 		<title>Index</title>
+		<link rel="stylesheet" type="text/css" href="main.css">
+
 	</head>
 	<style>
 			</style>	
 	<body>
-
-		<nav>
-			<a href="index.html">Home</a>
-			<a href="about-me.html">About-me</a>
-			<a href="projects.html">Projects</a>
-			<a href="contacts.html">Contacts</a>
+             <h1 class="pew">Welcome to my Website! My name is Keewaan Bell!</h1>
+		<nav id="list">
+			<ul>
+			<li><a class="boo"href="index.html">Home</a></li>
+			<li><a href="about-me.html">About-Me</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="contacts.html">Contacts</a></li>
+			</ul>
+		
 		</nav>
+				<h1>Three Adjectives About Me Are:</h1>
+	<div id="click"><h1>Chill</h1>
+					<h1>Calm</h1>
+					<h1>Athletic</h1></div>
+
+
 	</body>
 </html>
