--- a/about-me.html
+++ b/about-me.html
@@ -1,21 +1,25 @@
-about-me.html
 <!DOCTYPE html>
 <html>
 	<head>
 		<title>About Me</title>
 		<link rel="stylesheet" type="text/css" href="main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	</head>
 	<body>
 
-		<nav>
-			<a href="index.html">Home</a>
-			<a href="about-me.html">About-Me</a>
-			<a href="projects.html">Projects</a>
-			<a href="contacts.html">Contacts</a>
+		<nav id="list">
+			<ul>
+			<li><a class="boo"href="index.html">Home</a></li>
+			<li><a href="about-me.html">About-Me</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="contacts.html">Contacts</a></li>
+			</ul>
 		
 		</nav>
-		<img src= meee.JPG
-		<div id=huh><p>Hello, my name is Keewaan Bell and I am a first year at SMASH Academy. I'm a rising sophomore at Morrow High school. I'm in the magnet program and I play basketball. My favorite color is orange and my favorite food is pizza. I enjoy playing sports and video games. If you ever want to talk to me,  I'm a nice and outgoing person, I just need my moments alone sometimes.
-		 I feel like I'm pretty happy where I am. SMASH is going good, and I'm having fun at the moment.</p></div>
+		<div id=huh>
+		<img src= meee.JPG" id=ahhh>
+		<p>Hello, my name is Keewaan Bell and I am a first year at SMASH Academy. I was born in 2004 in Dublin, Georgia in Fairview Hospital. I'm a rising sophomore at Morrow High school. I'm in the magnet program and I play basketball.</p>
+		 <p>My favorite color is orange and my favorite food is pizza. I enjoy playing sports and video games. If you ever want to talk to me,  I'm a nice and outgoing person, I just need my moments alone sometimes. I feel like I'm pretty happy where I am. SMASH is going good, and I'm having fun at the moment.</p></div>
 	</body>
 </html>
