--- a/about-me.html
+++ b/about-me.html
@@ -18,7 +18,7 @@
 		
 		</nav>
 		<div id=huh>
-		<img src= meee.JPG" id=ahhh>
+		<img src= "meee.JPG" id=ahhh>
 		<p>Hello, my name is Keewaan Bell and I am a first year at SMASH Academy. I was born in 2004 in Dublin, Georgia in Fairview Hospital. I'm a rising sophomore at Morrow High school. I'm in the magnet program and I play basketball.</p>
 		 <p>My favorite color is orange and my favorite food is pizza. I enjoy playing sports and video games. If you ever want to talk to me,  I'm a nice and outgoing person, I just need my moments alone sometimes. I feel like I'm pretty happy where I am. SMASH is going good, and I'm having fun at the moment.</p></div>
 	</body>
